# govrixaioss

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/govrix-ai-oss-cli/: Cargo.toml
crates/govrix-ai-oss-cli/src/: client.rs  main.rs
crates/govrix-ai-oss-cli/src/commands/: agents.rs  events.rs  status.rs
crates/govrix-ai-oss-common/src/: lib.rs
crates/govrix-ai-oss-proxy/: Cargo.toml
crates/govrix-ai-oss-proxy/src/: events.rs  lib.rs  main.rs
crates/govrix-ai-oss-proxy/src/api/: mod.rs  router.rs  state.rs
crates/govrix-ai-oss-proxy/src/api/handlers/: agents.rs  budgets.rs  config.rs  costs.rs  events.rs  health.rs  mod.rs  projects.rs  reports.rs
crates/govrix-ai-oss-proxy/src/policy/: budget.rs  engine.rs  loader.rs  mod.rs  pii.rs
crates/govrix-ai-oss-proxy/src/proxy/: agent_detect.rs  handler.rs  interceptor.rs  mod.rs  streaming.rs  upstream.rs
crates/govrix-ai-oss-proxy/static/: dashboard.html
crates/govrix-ai-oss-proxy/tests/: integration.rs
crates/govrix-ai-oss-reports/: Cargo.toml
crates/govrix-ai-oss-store/src/: lib.rs
crates/govrix-common/: Cargo.toml
crates/govrix-common/src/: config.rs  tenant.rs
crates/govrix-identity/: Cargo.toml
crates/govrix-identity/src/: lib.rs
crates/govrix-policy/: Cargo.toml
crates/govrix-policy/src/: budget.rs  engine.rs
crates/govrix-server/: Cargo.toml
crates/govrix-server/src/: api.rs  main.rs
docker/: Dockerfile  docker-compose.production.yml
init/: 002_create_agents.sql  006_budget_daily.sql
k8s/: deployment.yaml  service.yaml
remotion/: package-lock.json  package.json
remotion/src/: GovrixLaunchVideo.tsx  Root.tsx
remotion/src/scenes/: ColdOpen.tsx  ComplianceShield.tsx  DashboardAgents.tsx  DashboardCosts.tsx  DashboardEvents.tsx  FiveQuestions.tsx  TheClose.tsx  TheReveal.tsx  TheWeight.tsx
scripts/: seed-demo-data.sh  verify.sh
