[package]
name = "govrix-identity"
version.workspace = true
edition.workspace = true

[dependencies]
govrix-ai-oss-common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rcgen = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
